# microlib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cat_ul.sh
playground/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  simple_test.hpp  test-alg_bitset.cpp  test-alg_cont_eq_fun.cpp  test-alg_elementwise.cpp  test-alg_scalar_eq_fun.cpp  test-algorithm.cpp  test-include.cpp  test-inlinevector.cpp  test-math.cpp  test-math_special.cpp  test-ml.cpp  test-span.cpp  test-stopwatch.cpp  test-string.cpp  test-string_par.cpp  test-to_string.cpp  test-type_traits.cpp  test-ul-2.cpp  test-ul.cpp  test_common.cpp
ul/: CMakeLists.txt  alg_bitset.h  alg_cont_eq_fun.h  alg_elementwise.h  alg_scalar_eq_fun.h  algorithm.h  check.cpp  check.h  config.h  container_math.h  either.h  inlinevector.h  math.cpp  math.h  math_special.h  maybe.h  ml.h  preproc.h  size_bounds.h  span.h  stopwatch.h  string.cpp  string.h  string_par.h  stringf.cpp  stringf.h  to_string.h  type_traits.h  ul.cpp  ul.h  usual.h
